[tool.poetry]
name = "informative-path-planning"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]
readme = "README.md"
packages = [{include = "informative_path_planning"}]

[tool.poetry.dependencies]
python = "^3.9"
gpy = "^1.10.0"
matplotlib = "^3.7.1"
ipython = "^8.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"


[tool.poetry.group.isort.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
